update gallery grid
update gallery grid

--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -4,9 +4,7 @@
   <div class="medium-12 cell text-center">
     <h3 class="text-center">Contact Us</h3>
     <hr>
-    <!-- <h4>Tell us more about your next project</h4>
-    <p>Providing proven expertise in structural concrete construction to Southern California</p>
-    <br> -->
+
   </div>
 
   <div class="grid-x grid-margin-x medium-margin-collapse">
@@ -24,7 +22,6 @@
 
       <!-- form area with abide-->
       <!-- form input area with ajax and php, id is event listener-->
-
 
       <form method="post" id="contact-form" action="assets/php/send.php" data-abide novalidate>
 
@@ -49,7 +46,7 @@
         <label>
       <textarea placeholder="Project Description" class="login-box-input" name="textarea" required></textarea>
         <span class="form-error">
-          Please tell us about your project and how we can help
+          Please tell us about your project
         </span>
       </label>
 
