--- a/src/partials/main-page-gallery.html
+++ b/src/partials/main-page-gallery.html
@@ -6,8 +6,10 @@
       <hr>
     </div>
   </div>
+
+
   <div class="grid-container full">
-    <div class="grid-x margin-collapse small-up-1 medium-up-2 large-up-4 ">
+    <div class=" grid-x grid-margin-x grid-margin-y small-up-1 medium-up-2 large-up-2">
 
       <div class="cell">
         <div class="main-gal">
@@ -45,10 +47,10 @@
           </div>
         </div>
       </div>
-
+  </div>
       <!-- Projects 2nd Row-->
-
-      <div class="grid-x margin-collapse small-up-1 medium-up-2 large-up-4 ">
+  <br>
+      <div class="grid-x grid-margin-x grid-margin-y small-up-1 medium-up-2 large-up-2">
         <div class="cell">
           <div class="main-gal">
             <img src="../assets/img/main-page-gallery/church-link.jpg" class="thumbnail" alt="">
@@ -87,3 +89,5 @@
       </div>
 
     </div>
+
+  </div>
