--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,12 +1,15 @@
 <!-- contact us section -->
 
 <section id="contact" data-magellan-target="contact">
+
+
+
   <div class="medium-12 cell text-center">
     <h3 class="text-center">Contact Us</h3>
     <hr>
-
   </div>
 
+<div class="grid-container fluid">
   <div class="grid-x grid-margin-x medium-margin-collapse">
     <div class="medium-6 cell" id="map-area">
 
@@ -16,9 +19,6 @@
 
     </div>
     <div class="medium-6 cell" id="contact-area">
-
-
-
 
       <!-- form area with abide-->
       <!-- form input area with ajax and php, id is event listener-->
@@ -54,5 +54,6 @@
       </form>
 
     </div>
+  </div>
   </div>
 </section>
