--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,7 @@
 <footer class="site-footer">
   <div class="grid-x grid-margin-x">
-
     <div class="medium-4 large-6 cell">
-      <h5><span>Thunder Jones</span> Contracting Group, Incorporated</h5>
+      <h5><span>Thunder Jones</span> Contracting</h5>
     </div>
 
     <div class="medium-4 large-3 cell">
