--- a/src/partials/main-page-gallery.html
+++ b/src/partials/main-page-gallery.html
@@ -8,9 +8,8 @@
   </div>
 
 
-  <div class="grid-container full">
-    <div class=" grid-x grid-margin-x grid-margin-y small-up-1 medium-up-2 large-up-2">
-
+  <div class="grid-container fluid">
+    <div class=" grid-x grid-margin-x grid-padding-y small-up-1 medium-up-2 large-up-2">
       <div class="cell">
         <div class="main-gal">
           <img src="/assets/img/main-page-gallery/vuelink.jpg" class="thumbnail" alt="">
