--- a/src/assets/scss/components/_hero.scss
+++ b/src/assets/scss/components/_hero.scss
@@ -1,5 +1,5 @@
 /* hero section*/
-$hero-height: 70vh;
+$hero-height: 100vh;
 
 .hero {
   width: 100%;
@@ -13,9 +13,9 @@ h1{
   color: lighten( $primary, 15% );
   text-transform: uppercase;
   font-weight: 500;
-    font-size: 2.6rem;
+    font-size: 2.8rem;
     @include breakpoint(small only) {
-      font-size: rem-calc(16);
+      font-size: rem-calc(25);
     }
 
 }
@@ -24,31 +24,32 @@ h1{
     color: $white;
 
     @include breakpoint(small) {
-      font-size: rem-calc(14);
+      font-size: rem-calc(15);
     }
 }
 
 p {
-  font-size: 1.0rem;
+  font-size: 1.5rem;
 }
   .button{
-    background-color: $buttoncolor;
+    color: $buttoncolor;
     border-radius: 2px;
     color: $white;
     text-transform: uppercase;
     transition:0.5s ease-in-out;
     font-weight: normal;
     @include breakpoint(small) {
-      padding:  rem-calc(6 5);
-      font-size: rem-calc(12);
-
+      padding:  rem-calc(8 8);
+      font-size: rem-calc(15);
+      margin: rem-calc(5);
     }
     @include breakpoint(medium) {
    padding: $button-padding;
+   margin: rem-calc(5);
     }
     @include breakpoint(large) {
  padding: $button-padding;
- margin: rem-calc(2);
+ margin: rem-calc(5);
     }
 
     &:hover,
@@ -70,8 +71,8 @@ p {
 
 .hero-title {
     // keep as em unit so it doesn's stack on itself
-  line-height: 1.22em;
-  margin-bottom: 1.2rem;
+  line-height: 1.25em;
+  margin-bottom: 1.8rem;
 }
 
 .hero-description {
@@ -80,7 +81,7 @@ p {
 
 .hero-bg-image {
   overflow: hidden;
-  background: url('../img/concretepour.jpg') 50% no-repeat;
+  background: url('../img/hero.jpg') 50% no-repeat;
   background-position: center center;
   background-size: cover;
 
@@ -91,7 +92,7 @@ p {
     display: block;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.3);
     position: relative;
   }
 }
