--- a/src/partials/main-page-gallery.html
+++ b/src/partials/main-page-gallery.html
@@ -6,87 +6,91 @@
       <hr>
     </div>
   </div>
-
-
+  <!-- main page gallery -->
   <div class="grid-container fluid">
     <div class=" grid-x grid-margin-x grid-padding-y small-up-1 medium-up-2 large-up-2">
+
       <div class="cell">
         <div class="main-gal">
-          <img src="/assets/img/main-page-gallery/vuelink.jpg" class="thumbnail" alt="">
-          <div class="cptn">
-
-            <a href="project1_thevue.html" target="_blank" class="button">The Vue on 5th <span><i class="fa fa-arrow-circle-right"></i></span></a>
+          <a href="project1_thevue.html" target="_blank">
+            <img src="/assets/img/main-page-gallery/vuelink.jpg" class="thumbnail" alt="">
+          </a>
+          <div class="gal_description">
+            <h2 class="text-center">The Vue on 5th</h2>
           </div>
         </div>
       </div>
 
       <div class="cell">
         <div class="main-gal">
+          <a href="project2_tc.html" target="_blank">
           <img src="../assets/img/main-page-gallery/tc-link.jpg" class="thumbnail" alt="">
-          <div class="cptn">
-            <a href="project2_tc.html" target="_blank" class="button">Town & Country Hotel <span><i class="fa fa-arrow-circle-right"></i></span></a>
+          </a>
+          <div class="gal_description">
+            <h2 class="text-center">Town & Country Hotel</h2>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="cell">
+        <div class="main-gal">
+          <a href="project3_broad.html" target="_blank">
+            <img src="../assets/img/main-page-gallery/broadstone-link.jpg" class="thumbnail" alt=""></a>
+          <div class="gal_description">
+            <h2 class="text-center">Broadstone Little Italy</h2>
           </div>
         </div>
       </div>
 
       <div class="cell">
         <div class="main-gal">
-          <img src="../assets/img/main-page-gallery/broadstone-link.jpg" class="thumbnail" alt="">
-          <div class="cptn">
-            <a href="project3_broad.html" target="_blank" class="button">Broadstone Little Italy <span><i class="fa fa-arrow-circle-right"></i></span></a>
+          <a href="project4_vista.html" target="_blank"><img src="../assets/img/main-page-gallery/vista-link.jpg" class="thumbnail" alt=""></a>
+          <div class="gal_description">
+            <h2 class="text-center">Vista Medical Clinic</h2>
           </div>
         </div>
       </div>
 
-      <div class="cell">
-        <div class="main-gal">
-          <img src="../assets/img/main-page-gallery/vista-link.jpg" class="thumbnail" alt="">
-          <div class="cptn">
-            <a href="project4_vista.html" target="_blank" class="button">Vista Medical Clinic <span><i class="fa fa-arrow-circle-right"></i></span></a>
-          </div>
-        </div>
-      </div>
-  </div>
       <!-- Projects 2nd Row-->
-  <br>
+      <br>
       <div class="grid-x grid-margin-x grid-margin-y small-up-1 medium-up-2 large-up-2">
         <div class="cell">
           <div class="main-gal">
-            <img src="../assets/img/main-page-gallery/church-link.jpg" class="thumbnail" alt="">
-            <div class="cptn">
-              <a href="project5_water.html" target="_blank" class="button">Water of Life Church <span><i class="fa fa-arrow-circle-right"></i></span></a>
+            <a href="project5_water.html" target="_blank"><img src="../assets/img/main-page-gallery/church-link.jpg" class="thumbnail" alt=""></a>
+            <div class="gal_description">
+              <h2 class="text-center">Water of Life Church</h2>
             </div>
           </div>
         </div>
 
         <div class="cell">
           <div class="main-gal">
-            <img src="../assets/img/main-page-gallery/military-link.jpg" class="thumbnail" alt="">
-            <div class="cptn">
-              <a href="project6_military.html" target="_blank" class="button">Military Fitness <span><i class="fa fa-arrow-circle-right"></i></span></a>
+            <a href="project6_military.html" target="_blank"><img src="../assets/img/main-page-gallery/military-link.jpg" class="thumbnail" alt=""></a>
+            <div class="gal_description">
+              <h2 class="text-center">Military Fitness Center</h2>
             </div>
           </div>
         </div>
 
         <div class="cell">
           <div class="main-gal">
-            <img src="../assets/img/main-page-gallery/pacs-link.jpg" class="thumbnail" alt="">
-            <div class="cptn">
-              <a href="project7_pac.html" target="_blank" class="button">Pacific Station <span><i class="fa fa-arrow-circle-right"></i></span></a>
+            <a href="project7_pac.html" target="_blank"><img src="../assets/img/main-page-gallery/pacs-link.jpg" class="thumbnail" alt=""></a>
+            <div class="gal_description">
+              <h2 class="text-center">Pacific Station Encinitas</h2>
             </div>
           </div>
         </div>
 
         <div class="cell">
           <div class="main-gal">
-            <img src="../assets/img/main-page-gallery/project-link.jpg" class="thumbnail" alt="">
-            <div class="cptn">
-              <a href="project8_alta.html" target="_blank" class="button">Alta 1919<span><i class="fa fa-arrow-circle-right"></i></span></a>
+            <a href="project8_alta.html" target="_blank"><img src="../assets/img/main-page-gallery/project-link.jpg" class="thumbnail" alt=""></a>
+            <div class="gal_description">
+              <h2 class="text-center">Alta 1919</h2>
             </div>
           </div>
         </div>
+
       </div>
-
     </div>
-
   </div>
