--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -18,9 +18,15 @@
     <!-- off canvas menu -->
     <!-- mobile nav bar -->
     <br>
-    <h4 class="text-center" id="off-canvas-nav-heading">Thunder Jones</h4>
-    <h6 class="text-center" id="off-canvas-nav-subheading"> Contracting Group Inc.</h6>
+
+
+    <h4 id="off-canvas-nav-heading">Thunder Jones</h4>
+
     <br>
+    <img class="logo-nav" src="../assets/img/tjc_transparent_logo block_small_white.png" class="thumbnail" alt="">
+
+    <h6 class="text-center" id="off-canvas-nav-subheading"> Contracting Group Inc.</h6>
+
     <div class="off-canvas-nav-list">
       <ul class="vertical dropdown menu">
         <li><a href="index.html#home">Home</a></li>
@@ -29,6 +35,8 @@
         <li><a href="index.html#team">Team</a></li>
         <li><a href="index.html#contact">Contact</a></li>
       </ul>
+
+
     </div>
   </div>
 
