--- a/src/partials/main-page-gallery.html
+++ b/src/partials/main-page-gallery.html
@@ -52,45 +52,51 @@
         </div>
       </div>
 
-      <!-- Projects 2nd Row-->
-      <br>
-      <div class="grid-x grid-margin-x grid-margin-y small-up-1 medium-up-2 large-up-2">
-        <div class="cell">
-          <div class="main-gal">
-            <a href="project5_water.html" target="_blank"><img src="../assets/img/main-page-gallery/church-link.jpg" class="thumbnail" alt=""></a>
-            <div class="gal_description">
-              <h2 class="text-center">Water of Life Church</h2>
-            </div>
-          </div>
-        </div>
-
-        <div class="cell">
-          <div class="main-gal">
-            <a href="project6_military.html" target="_blank"><img src="../assets/img/main-page-gallery/military-link.jpg" class="thumbnail" alt=""></a>
-            <div class="gal_description">
-              <h2 class="text-center">Military Fitness Center</h2>
-            </div>
-          </div>
-        </div>
-
-        <div class="cell">
-          <div class="main-gal">
-            <a href="project7_pac.html" target="_blank"><img src="../assets/img/main-page-gallery/pacs-link.jpg" class="thumbnail" alt=""></a>
-            <div class="gal_description">
-              <h2 class="text-center">Pacific Station Encinitas</h2>
-            </div>
-          </div>
-        </div>
-
-        <div class="cell">
-          <div class="main-gal">
-            <a href="project8_alta.html" target="_blank"><img src="../assets/img/main-page-gallery/project-link.jpg" class="thumbnail" alt=""></a>
-            <div class="gal_description">
-              <h2 class="text-center">Alta 1919</h2>
-            </div>
-          </div>
-        </div>
-
-      </div>
     </div>
   </div>
+  <!-- Projects 2nd Row-->
+
+  <div class="grid-container fluid">
+    <div class=" grid-x grid-margin-x grid-padding-y small-up-1 medium-up-2 large-up-2">
+
+
+
+      <div class="cell">
+        <div class="main-gal">
+          <a href="project5_water.html" target="_blank"><img src="../assets/img/main-page-gallery/church-link.jpg" class="thumbnail" alt=""></a>
+          <div class="gal_description">
+            <h2 class="text-center">Water of Life Church</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="cell">
+        <div class="main-gal">
+          <a href="project6_military.html" target="_blank"><img src="../assets/img/main-page-gallery/military-link.jpg" class="thumbnail" alt=""></a>
+          <div class="gal_description">
+            <h2 class="text-center">Military Fitness Center</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="cell">
+        <div class="main-gal">
+          <a href="project7_pac.html" target="_blank"><img src="../assets/img/main-page-gallery/pacs-link.jpg" class="thumbnail" alt=""></a>
+          <div class="gal_description">
+            <h2 class="text-center">Pacific Station Encinitas</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="cell">
+        <div class="main-gal">
+          <a href="project8_alta.html" target="_blank"><img src="../assets/img/main-page-gallery/project-link.jpg" class="thumbnail" alt=""></a>
+          <div class="gal_description">
+            <h2 class="text-center">Alta 1919</h2>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
