--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -14,18 +14,14 @@
 
   <!-- off canvas content menu -->
   <div class="off-canvas position-left" id="offCanvas" data-off-canvas data-toggle="offCanvas">
-
     <!-- off canvas menu -->
     <!-- mobile nav bar -->
-    <br>
-
 
     <h4 id="off-canvas-nav-heading">Thunder Jones</h4>
-
     <br>
     <img class="logo-nav" src="../assets/img/tjc_transparent_logo block_small_white.png" class="thumbnail" alt="">
 
-    <h6 class="text-center" id="off-canvas-nav-subheading"> Contracting Group Inc.</h6>
+    <h6 class="text-center" id="off-canvas-nav-subheading"> </h6>
 
     <div class="off-canvas-nav-list">
       <ul class="vertical dropdown menu">
