--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -3,6 +3,7 @@
 <html class="no-js" lang="en">
 
 <head>
+  <link rel="shortcut icon" type="image/png" href="../assets/img/favicon.png">
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
