--- a/src/assets/scss/components/_custom.scss
+++ b/src/assets/scss/components/_custom.scss
@@ -160,3 +160,34 @@ div.off-canvas-nav-list {
     border: none;
   }
 }
+
+#bio-photo{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.bio{
+  // display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+h2.bio-name {
+  text-align: center;
+}
+
+.bio-left {
+  @include breakpoint(large) {
+    padding: rem-calc(0 50 20 225);
+  }
+
+}
+
+.bio-right {
+  @include breakpoint(large) {
+    padding: rem-calc(0 225 20 0);
+  }
+}
