--- a/src/assets/scss/components/_hero.scss
+++ b/src/assets/scss/components/_hero.scss
@@ -17,20 +17,22 @@ h1{
     @include breakpoint(small only) {
       font-size: rem-calc(25);
     }
-
 }
-
-.hero-sub {
-    color: $white;
-
-    @include breakpoint(small) {
-      font-size: rem-calc(15);
-    }
 }
 
 p {
   font-size: 1.5rem;
 }
+
+.logo-hero {
+  width: 74px;
+  height: 53px;
+  border: 0;
+  float: left;
+  margin: rem-calc(0 0 0 8);
+  padding: rem-calc(0 2 0 0);
+}
+
 
 /* hero buttons cta */
 
@@ -73,7 +75,7 @@ a #projects {
       filter: grayscale(40%);
         -webkit-filter: grayscale(40%);
       opacity: 0.7;
-    }
+    
   }
 }
 .hero-content {
