--- a/src/assets/scss/components/_custom.scss
+++ b/src/assets/scss/components/_custom.scss
@@ -78,7 +78,7 @@ hr {
 .title-bar {
   position: fixed;
   width: 100%;
-  z-index: 3;
+  z-index: 1;
   padding-top: -10px;
 
 }
@@ -161,34 +161,30 @@ div.off-canvas-nav-list {
   }
 }
 
-// .bio{
-//   @include flex;
-//   @include flex-align(center, middle);
-// }
+#bio-photo{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 
-#bio-photo {
-  @include flex;
-  @include flex-align(center, middle);
-  @include breakpoint(large) {
-    background-color: $light-gray;
-  }
 }
 
-h3.bio-name {
+.bio{
+  @include flex;
+  @include flex-align(center, middle);
+}
+
+h2.bio-name {
   text-align: center;
-  padding: rem-calc(20 0 0 0);
 }
 
 .bio-left {
   @include breakpoint(large) {
-    padding: rem-calc(0 50 20 100);
-    text-align: justify;
+    padding: rem-calc(0 50 20 225);
   }
 }
 
 .bio-right {
   @include breakpoint(large) {
-    padding: rem-calc(0 100 20 0);
-    text-align: justify;
+    padding: rem-calc(0 225 20 0);
   }
 }
