--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -2,7 +2,7 @@
 
 .site-footer {
   background: #2C353D;
-  color: white;
+
   height: 200%;
   padding: rem-calc(40 20);
 
@@ -13,6 +13,9 @@
   ul {
     list-style-type: none;
     font-size: 0.9rem;
+    li {
+      color: white;
+    }
     @include breakpoint(small only) {
       text-align: center;
       font-size: 0.8rem;
@@ -35,7 +38,7 @@
   }
 
   h5 {
-
+    color: white;
     margin: rem-calc(12 0 0 0);
     @include breakpoint(large) {
       font-size: rem-calc(18);
