--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -3,6 +3,7 @@
 .site-footer {
   background: #2C353D;
 
+font-family: Helvetica, Roboto, Arial, sans-serif;
   height: 200%;
   padding: rem-calc(40 20);
 
@@ -32,7 +33,7 @@
   }
 
   i.fa {
-    color: lighten( $primary, 30% );
+    color: lighten( $primary, 20% );
     padding-right: 5px;
     font-size: rem-calc(15);
   }
@@ -56,7 +57,7 @@
   }
 
   span {
-    color: lighten( $primary, 12% );
+    color: lighten( $primary, 20% );
 
   }
 
