--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -7,7 +7,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thunder Jones</title>
+  <!-- SEO -->
+  <meta name="description" content="Thunder Jones Contracting Group, Inc.; Structural concrete professional services located in San Diego, California. We specialize in concrete construction for larger-scale commercial sector industry projects">
+
+  <title>Thunder Jones | Structural Concrete</title>
   <link rel="stylesheet" href="{{root}}assets/css/app.css">
 </head>
 
