change logo icon to link back home

--- a/src/partials/navigation.html
+++ b/src/partials/navigation.html
@@ -7,7 +7,7 @@
   <div class="top-bar" id="responsive-menu" data-sticky data-margin-top="0">
 
     <div class="top-bar-left">
-      <img class="logo" src="../assets/img/tjc_transparent_logo block_small_white.png" class="thumbnail" alt="">
+      <a href="index.html#home"><img class="logo" src="../assets/img/tjc_transparent_logo block_small_white.png" class="thumbnail" alt=""></a>
 
       <ul class="dropdown menu" data-dropdown-menu>
         <li class="menu-text">
