icon linked to home in mobile

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -23,7 +23,7 @@
 
     <h4 id="off-canvas-nav-heading">Thunder Jones</h4>
     <br>
-    <img class="logo-nav" src="../assets/img/tjc_transparent_logo block_small_white.png" class="thumbnail" alt="">
+    <a href="index.html#home"><img class="logo-nav" src="../assets/img/tjc_transparent_logo block_small_white.png" class="thumbnail" alt=""></a>
 
     <h6 class="text-center" id="off-canvas-nav-subheading"> </h6>
 
