--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -12,6 +12,20 @@
 
   <title>Thunder Jones | Structural Concrete</title>
   <link rel="stylesheet" href="{{root}}assets/css/app.css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114704599-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-114704599-1');
+  </script>
+
 </head>
 
 <body>
